# Smart_Confidant

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  app.py  deploy.py  deploy.sh  env.example  environment.yml  prometheus.yml  pyproject.toml  requirements.txt  restart.sh  run-local.bat
.github/workflows/: deploy.yml  discord-notification.yml  hf-sync.yml  rebuild.yml  test.yml
tests/: test_smoke.py
