[project]
name = "smart-confidant"
version = "0.1.0"
description = "An AI chatbot assistant for Magic: The Gathering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "huggingface-hub>=0.27.0",
    "gradio>=4.43.0",
    "transformers>=4.43.0",
    "accelerate>=0.33.0",
    "pydantic>=2.6.0",
    "psutil>=5.9.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

